force-app/main/default/objects/Benchmark__c/Benchmark__c.object-meta.xml
<CustomObject>
    <label>Benchmark</label>
    <nameField>
        <label>Benchmark Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Benchmarks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>