force-app/main/default/objects/Benchmark__c/fields/Back_Squat__c.field-meta.xml
<CustomField>
    <fullName>Back_Squat__c</fullName>
    <label>Back Squat</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>