force-app/main/default/objects/Benchmark__c/fields/Bench_Press__c.field-meta.xml
<CustomField>
    <fullName>Bench_Press__c</fullName>
    <label>Bench Press</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>