force-app/main/default/objects/Benchmark__c/fields/Fitness_Level__c.field-meta.xml
<CustomField>
    <fullName>Fitness_Level__c</fullName>
    <label>Fitness_Level</label>
    <length>30</length>
    <type>Text</type>
</CustomField>