force-app/main/default/objects/Benchmark__c/fields/Goal_Benchmarks__c.field-meta.xml
<CustomField>
    <fullName>Goal_Benchmarks__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Goal Benchmarks</label>
    <type>Checkbox</type>
</CustomField>