force-app/main/default/objects/Benchmark__c/fields/Gym_Member__c.field-meta.xml
<CustomField>
    <fullName>Gym_Member__c</fullName>
    <label>Gym Member</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Benchmarks</relationshipLabel>
    <relationshipName>Benchmarks</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>