force-app/main/default/objects/Benchmark__c/fields/Member__c.field-meta.xml
<CustomField>
    <fullName>Member__c</fullName>
    <label>Member</label>
    <referenceTo>Member__c</referenceTo>
    <relationshipLabel>Benchmarks</relationshipLabel>
    <relationshipName>Benchmarks</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>