force-app/main/default/objects/Benchmark__c/fields/One_Mile_Run_Time__c.field-meta.xml
<CustomField>
    <fullName>One_Mile_Run_Time__c</fullName>
    <label>One Mile Run Time</label>
    <type>Time</type>
</CustomField>