force-app/main/default/objects/Benchmark__c/fields/Workout__c.field-meta.xml
<CustomField>
    <fullName>Workout__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Workout</label>
    <referenceTo>Workout__c</referenceTo>
    <relationshipLabel>Benchmarks</relationshipLabel>
    <relationshipName>Benchmarks</relationshipName>
    <type>Lookup</type>
</CustomField>