force-app/main/default/objects/Benchmark__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Fitness_Level__c</columns>
    <columns>Date__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Mine</filterScope>
    <label>All</label>
</ListView>